--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "laravel-vue-pagination": "^2.3.1",
+        "luxon": "^2.0.2"
     }
 }
